--- a/package.json
+++ b/package.json
@@ -4,8 +4,11 @@
   "version": "1.0.0",
   "author": "Oliver Turner",
   "dependencies": {
+    "exports-loader": "^0.6.2",
+    "imports-loader": "^0.6.5",
     "react": "^0.14.2",
-    "react-dom": "^0.14.2"
+    "react-dom": "^0.14.2",
+    "whatwg-fetch": "^0.10.1"
   },
   "devDependencies": {
     "autoprefixer-loader": "^3.1.0",
