--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "html-webpack-plugin": "^1.6.2",
     "isparta": "^3.5.3",
     "isparta-instrumenter-loader": "^0.2.1",
+    "json-loader": "^0.5.3",
     "karma": "^0.13.15",
     "karma-chai": "^0.1.0",
     "karma-coverage": "^0.5.3",
