--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "imports-loader": "^0.6.5",
     "react": "^0.14.2",
     "react-dom": "^0.14.2",
+    "react-redux": "^4.0.0",
+    "redux": "^3.0.4",
     "whatwg-fetch": "^0.10.1"
   },
   "devDependencies": {
@@ -48,6 +50,7 @@
     "react-transform-catch-errors": "^1.0.0",
     "react-transform-hmr": "^1.0.1",
     "redbox-react": "^1.1.1",
+    "redux-devtools": "^2.1.5",
     "sass-loader": "^3.1.1",
     "style-loader": "^0.13.0",
     "url-loader": "^0.5.6",
