--- a/package.json
+++ b/package.json
@@ -16,45 +16,47 @@
     "autoprefixer-loader": "^3.1.0",
     "babel-core": "^5.8.34",
     "babel-eslint": "^4.1.5",
-    "babel-loader": "^5.1.4",
+    "babel-loader": "^5.4.0",
     "babel-plugin-object-assign": "^1.2.1",
     "babel-plugin-react-transform": "^1.1.1",
     "chai": "^3.4.1",
-    "css-loader": "^0.22.0",
-    "d3": "^3.5.8",
-    "eslint": "^1.9.0",
+    "css-loader": "^0.23.0",
+    "d3": "^3.5.9",
+    "eslint": "^1.10.1",
     "eslint-config-standard": "^4.4.0",
-    "eslint-config-standard-react": "^1.1.0",
+    "eslint-config-standard-react": "^1.2.1",
     "eslint-loader": "^1.1.1",
-    "eslint-plugin-react": "^3.8.0",
+    "eslint-plugin-react": "^3.10.0",
     "eslint-plugin-standard": "^1.3.1",
     "extract-text-webpack-plugin": "^0.9.1",
     "file-loader": "^0.8.4",
     "gh-pages": "^0.5.0",
     "html-webpack-plugin": "^1.6.2",
-    "isparta": "^3.5.3",
-    "isparta-instrumenter-loader": "^0.2.1",
+    "isparta": "^4.0.0",
+    "isparta-instrumenter-loader": "^1.0.0",
     "json-loader": "^0.5.3",
     "karma": "^0.13.15",
     "karma-chai": "^0.1.0",
     "karma-coverage": "^0.5.3",
-    "karma-mocha": "^0.2.0",
+    "karma-mocha": "^0.2.1",
     "karma-mocha-reporter": "^1.1.1",
     "karma-notify-reporter": "^0.1.1",
     "karma-phantomjs-launcher": "^0.2.1",
     "karma-webpack": "^1.7.0",
-    "mocha": "^2.3.3",
+    "mocha": "^2.3.4",
     "node-sass": "^3.4.2",
     "phantomjs": "*",
-    "react-addons-test-utils": "^0.14.2",
+    "react": "^0.14.3",
+    "react-addons-test-utils": "^0.14.3",
+    "react-dom": "^0.14.3",
     "react-transform-catch-errors": "^1.0.0",
     "react-transform-hmr": "^1.0.1",
-    "redbox-react": "^1.1.1",
+    "redbox-react": "^1.2.0",
     "redux-devtools": "^2.1.5",
-    "sass-loader": "^3.1.1",
+    "sass-loader": "^3.1.2",
     "style-loader": "^0.13.0",
     "url-loader": "^0.5.6",
-    "webpack": "^1.12.4",
+    "webpack": "^1.12.8",
     "webpack-dev-server": "^1.12.1"
   },
   "license": "MIT",
