--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react-dom": "^0.14.2",
     "react-redux": "^4.0.0",
     "redux": "^3.0.4",
+    "reselect": "^2.0.1",
     "whatwg-fetch": "^0.10.1"
   },
   "devDependencies": {
