--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "exports-loader": "^0.6.2",
     "imports-loader": "^0.6.5",
     "react": "^0.14.3",
+    "react-collapse": "^1.4.0",
     "react-dom": "^0.14.3",
+    "react-motion": "^0.3.1",
     "react-redux": "^4.0.0",
     "redux": "^3.0.4",
     "reselect": "^2.0.1",
