--- a/package.json
+++ b/package.json
@@ -1,11 +1,22 @@
 {
-  "name": "tech-radar",
-  "description": "A Tech Radar implementation using React and D3",
+  "name": "ea-tech-radar",
+  "description": "EA Tech Radar",
   "version": "1.0.0",
   "author": "Oliver Turner",
   "dependencies": {
+    "autoprefixer-loader": "^3.1.0",
+    "babel-core": "^5.8.34",
+    "babel-loader": "^5.4.0",
+    "babel-plugin-object-assign": "^1.2.1",
+    "babel-plugin-react-transform": "^1.1.1",
+    "css-loader": "^0.23.0",
+    "d3": "^3.5.9",
     "exports-loader": "^0.6.2",
+    "extract-text-webpack-plugin": "^0.9.1",
+    "file-loader": "^0.8.5",
+    "html-webpack-plugin": "^1.7.0",
     "imports-loader": "^0.6.5",
+    "node-sass": "^3.4.2",
     "react": "^0.14.3",
     "react-collapse": "^1.4.0",
     "react-dom": "^0.14.3",
@@ -13,60 +24,48 @@
     "react-redux": "^4.0.0",
     "redux": "^3.0.4",
     "reselect": "^2.0.1",
-    "whatwg-fetch": "^0.10.1"
+    "sass-loader": "^3.1.2",
+    "style-loader": "^0.13.0",
+    "url-loader": "^0.5.7",
+    "webpack": "^1.12.9"
   },
   "devDependencies": {
-    "autoprefixer-loader": "^3.1.0",
-    "babel-core": "^5.8.34",
     "babel-eslint": "^4.1.6",
-    "babel-loader": "^5.4.0",
-    "babel-plugin-object-assign": "^1.2.1",
-    "babel-plugin-react-transform": "^1.1.1",
     "chai": "^3.4.1",
-    "css-loader": "^0.23.0",
-    "d3": "^3.5.9",
     "eslint": "^1.10.1",
     "eslint-config-standard": "^4.4.0",
     "eslint-config-standard-react": "^1.2.1",
     "eslint-loader": "^1.1.1",
     "eslint-plugin-react": "^3.10.0",
     "eslint-plugin-standard": "^1.3.1",
-    "extract-text-webpack-plugin": "^0.9.1",
-    "file-loader": "^0.8.5",
     "gh-pages": "^0.5.0",
-    "html-webpack-plugin": "^1.6.2",
     "isparta": "^4.0.0",
     "isparta-instrumenter-loader": "^1.0.0",
-    "json-loader": "^0.5.4",
     "karma": "^0.13.15",
     "karma-chai": "^0.1.0",
     "karma-coverage": "^0.5.3",
     "karma-mocha": "^0.2.1",
-    "karma-mocha-reporter": "^1.1.1",
+    "karma-mocha-reporter": "^1.1.3",
     "karma-notify-reporter": "^0.1.1",
     "karma-phantomjs-launcher": "^0.2.1",
     "karma-webpack": "^1.7.0",
     "mocha": "^2.3.4",
-    "node-sass": "^3.4.2",
     "phantomjs": "*",
     "react-addons-test-utils": "^0.14.3",
     "react-transform-catch-errors": "^1.0.0",
     "react-transform-hmr": "^1.0.1",
     "redbox-react": "^1.2.0",
     "redux-devtools": "^2.1.5",
-    "sass-loader": "^3.1.2",
-    "style-loader": "^0.13.0",
-    "url-loader": "^0.5.7",
-    "webpack": "^1.12.9",
     "webpack-dev-server": "^1.14.0"
   },
   "license": "MIT",
   "main": "app/index.js",
-  "repository": "git@github.com:oliverturner/yarsk.git",
+  "repository": "git@bitbucket.org:oturner/tech-radar.git",
   "scripts": {
-    "build": "webpack --config _sys/webpack.production.js",
+    "build": "NODE_ENV=production webpack --config _sys/webpack.production.js",
     "build:gh": "npm run build && gh-pages -d ./dist && rm -r ./dist",
     "lint:js": "eslint .",
+    "prebuild": "rm -rf ./dist",
     "start": "webpack-dev-server --config _sys/webpack.config.js --no-info --hot --progress --colors --inline --content-base ./build --port 4000",
     "test": "npm run test:watch -- --single-run",
     "test:ci": "karma start _sys/karma.ci.conf.js --single-run",
