--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "babel-plugin-object-assign": "^1.2.1",
     "babel-plugin-react-transform": "^1.1.1",
     "css-loader": "^0.23.0",
-    "d3": "^3.5.9",
+    "d3": "^3.5.10",
     "exports-loader": "^0.6.2",
     "extract-text-webpack-plugin": "^0.9.1",
     "file-loader": "^0.8.5",
@@ -32,11 +32,11 @@
   "devDependencies": {
     "babel-eslint": "^4.1.6",
     "chai": "^3.4.1",
-    "eslint": "^1.10.1",
+    "eslint": "^1.10.2",
     "eslint-config-standard": "^4.4.0",
     "eslint-config-standard-react": "^1.2.1",
     "eslint-loader": "^1.1.1",
-    "eslint-plugin-react": "^3.10.0",
+    "eslint-plugin-react": "^3.11.1",
     "eslint-plugin-standard": "^1.3.1",
     "gh-pages": "^0.5.0",
     "isparta": "^4.0.0",
@@ -50,7 +50,7 @@
     "karma-phantomjs-launcher": "^0.2.1",
     "karma-webpack": "^1.7.0",
     "mocha": "^2.3.4",
-    "phantomjs": "*",
+    "phantomjs": "^1.9.19",
     "react-addons-test-utils": "^0.14.3",
     "react-transform-catch-errors": "^1.0.0",
     "react-transform-hmr": "^1.0.1",
