--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
     "babel-plugin-react-transform": "^1.1.1",
     "css-loader": "^0.23.0",
     "d3": "^3.5.10",
+    "es6-promise": "^3.0.2",
     "exports-loader": "^0.6.2",
     "extract-text-webpack-plugin": "^0.9.1",
     "file-loader": "^0.8.5",
     "html-webpack-plugin": "^1.7.0",
     "imports-loader": "^0.6.5",
+    "isomorphic-fetch": "^2.2.0",
     "node-sass": "^3.4.2",
     "react": "^0.14.3",
     "react-collapse": "^1.4.0",
