--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "html-webpack-plugin": "^1.7.0",
     "imports-loader": "^0.6.5",
     "isomorphic-fetch": "^2.2.0",
+    "markdown": "^0.5.0",
     "node-sass": "^3.4.2",
     "react": "^0.14.3",
     "react-collapse": "^1.4.0",
