--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "css-loader": "^0.23.0",
     "d3": "^3.5.10",
     "es6-promise": "^3.0.2",
+    "eslint": "^1.10.3",
     "exports-loader": "^0.6.2",
     "extract-text-webpack-plugin": "^0.9.1",
     "file-loader": "^0.8.5",
@@ -41,7 +42,7 @@
     "eslint-loader": "^1.1.1",
     "eslint-plugin-react": "^3.11.1",
     "eslint-plugin-standard": "^1.3.1",
-    "gh-pages": "^0.5.0",
+    "gh-pages": "^0.6.0",
     "isparta": "^4.0.0",
     "isparta-instrumenter-loader": "^1.0.0",
     "karma": "^0.13.15",
