--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "babel-plugin-object-assign": "^1.2.1",
     "babel-plugin-react-transform": "^1.1.1",
     "css-loader": "^0.23.0",
-    "d3": "^3.5.10",
+    "d3-color": "^0.3.1",
+    "d3-shape": "^0.1.0",
     "es6-promise": "^3.0.2",
     "eslint": "^1.10.3",
     "exports-loader": "^0.6.2",
@@ -40,7 +41,7 @@
     "eslint-config-standard": "^4.4.0",
     "eslint-config-standard-react": "^1.2.1",
     "eslint-loader": "^1.1.1",
-    "eslint-plugin-react": "^3.11.1",
+    "eslint-plugin-react": "^3.11.3",
     "eslint-plugin-standard": "^1.3.1",
     "gh-pages": "^0.6.0",
     "isparta": "^4.0.0",
@@ -66,10 +67,12 @@
   "main": "app/index.js",
   "repository": "git@bitbucket.org:oturner/tech-radar.git",
   "scripts": {
-    "build": "webpack --config _sys/webpack.production.js",
     "critical": "critical dist/index.html -b dist/ -w 1300 -h 900 -i true -H dist/index.html",
+    "build": "webpack --config _sys/webpack.production.js",
+    "analyze": "webpack --config _sys/webpack.production.js --profile --json > stats.json",
+    "postbuild": "npm run critical",
     "surge": "surge dist --domain $npm_package_name.surge.sh",
-    "postbuild": "npm run critical && npm run surge && rm -rf ./dist",
+    "build:surge": "npm run build && npm run surge && rm -rf ./dist",
     "build:gh": "npm run build && gh-pages -d ./dist && rm -r ./dist",
     "lint:js": "eslint .",
     "start": "webpack-dev-server --config _sys/webpack.config.js --no-info --hot --inline --content-base ./public --port 4000",
