--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-motion": "^0.3.1",
     "react-redux": "^4.0.0",
     "redux": "^3.0.4",
+    "redux-devtools": "^3.0.0",
     "redux-thunk": "^1.0.0",
     "reselect": "^2.0.1",
     "sass-loader": "^3.1.2",
