--- a/package.json
+++ b/package.json
@@ -21,14 +21,13 @@
     "isomorphic-fetch": "^2.2.0",
     "markdown": "^0.5.0",
     "node-sass": "^3.4.2",
-    "qs": "^6.0.1",
+    "query-string": "^3.0.0",
     "react": "^0.14.3",
     "react-collapse": "^1.4.0",
     "react-dom": "^0.14.3",
     "react-motion": "^0.3.1",
     "react-redux": "^4.0.0",
     "redux": "^3.0.4",
-    "redux-devtools": "^3.0.0",
     "redux-thunk": "^1.0.0",
     "reselect": "^2.0.1",
     "sass-loader": "^3.1.2",
@@ -62,7 +61,7 @@
     "react-transform-catch-errors": "^1.0.0",
     "react-transform-hmr": "^1.0.1",
     "redbox-react": "^1.2.0",
-    "redux-devtools": "^2.1.5",
+    "redux-devtools": "^3.0.0",
     "webpack-dev-server": "^1.14.0"
   },
   "license": "MIT",
