--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "extract-text-webpack-plugin": "^0.9.1",
     "file-loader": "^0.8.5",
     "html-webpack-plugin": "^1.7.0",
+    "immutable": "^3.7.6",
     "imports-loader": "^0.6.5",
     "isomorphic-fetch": "^2.2.0",
     "markdown": "^0.5.0",
@@ -56,6 +57,7 @@
     "karma-phantomjs-launcher": "^0.2.1",
     "karma-webpack": "^1.7.0",
     "mocha": "^2.3.4",
+    "nightwatch": "^0.8.9",
     "phantomjs": "^1.9.19",
     "react-addons-test-utils": "^0.14.3",
     "react-transform-catch-errors": "^1.0.0",
