--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "css-loader": "^0.23.0",
     "d3-color": "^0.3.1",
     "d3-shape": "^0.2.0",
+    "debounce": "^1.0.0",
     "es6-promise": "^3.0.2",
     "exports-loader": "^0.6.2",
     "extract-text-webpack-plugin": "^0.9.1",
