Added speech recognition and combined reducers

--- a/package.json
+++ b/package.json
@@ -9,11 +9,11 @@
     "babel-loader": "^5.4.0",
     "babel-plugin-object-assign": "^1.2.1",
     "babel-plugin-react-transform": "^1.1.1",
+    "bluebird": "^3.1.1",
     "css-loader": "^0.23.0",
     "d3-color": "^0.3.1",
     "d3-shape": "^0.2.0",
     "debounce": "^1.0.0",
-    "es6-promise": "^3.0.2",
     "exports-loader": "^0.6.2",
     "extract-text-webpack-plugin": "^0.9.1",
     "file-loader": "^0.8.5",
