--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "bluebird": "^3.1.1",
     "css-loader": "^0.23.0",
     "d3-color": "^0.3.1",
-    "d3-shape": "^0.2.0",
+    "d3-shape": "^0.3.0",
     "debounce": "^1.0.0",
     "exports-loader": "^0.6.2",
     "extract-text-webpack-plugin": "^0.9.1",
@@ -39,6 +39,7 @@
   },
   "devDependencies": {
     "babel-eslint": "^4.1.6",
+    "babel-plugin-react-transform": "^2.0.0",
     "chai": "^3.4.1",
     "eslint": "^1.10.3",
     "eslint-config-standard": "^4.4.0",
@@ -46,6 +47,7 @@
     "eslint-loader": "^1.1.1",
     "eslint-plugin-react": "^3.11.3",
     "eslint-plugin-standard": "^1.3.1",
+    "extract-text-webpack-plugin": "^1.0.0",
     "gh-pages": "^0.8.0",
     "isparta": "^4.0.0",
     "isparta-instrumenter-loader": "^1.0.0",
