--- a/package.json
+++ b/package.json
@@ -4,70 +4,75 @@
   "version": "1.0.0",
   "author": "Oliver Turner",
   "dependencies": {
-    "autoprefixer-loader": "^3.1.0",
-    "babel-core": "^5.8.34",
-    "babel-loader": "^5.4.0",
-    "babel-plugin-object-assign": "^1.2.1",
-    "babel-plugin-react-transform": "^1.1.1",
     "bluebird": "^3.1.1",
-    "css-loader": "^0.23.0",
-    "d3-color": "^0.3.1",
+    "d3-color": "^0.3.3",
     "d3-shape": "^0.3.0",
     "debounce": "^1.0.0",
-    "exports-loader": "^0.6.2",
-    "extract-text-webpack-plugin": "^0.9.1",
-    "file-loader": "^0.8.5",
-    "html-webpack-plugin": "^1.7.0",
     "immutable": "^3.7.6",
-    "imports-loader": "^0.6.5",
     "isomorphic-fetch": "^2.2.0",
     "markdown": "^0.5.0",
-    "node-sass": "^3.4.2",
     "query-string": "^3.0.0",
-    "react": "^0.14.3",
-    "react-collapse": "^1.4.0",
-    "react-dom": "^0.14.3",
+    "react": "^0.14.5",
+    "react-collapse": "^1.6.3",
+    "react-dom": "^0.14.5",
     "react-motion": "^0.3.1",
-    "react-redux": "^4.0.0",
-    "redux": "^3.0.4",
-    "redux-thunk": "^1.0.0",
-    "reselect": "^2.0.1",
-    "sass-loader": "^3.1.2",
-    "style-loader": "^0.13.0",
-    "url-loader": "^0.5.7",
-    "webpack": "^1.12.9"
+    "react-redux": "^4.0.6",
+    "redux": "^3.0.5",
+    "redux-thunk": "^1.0.3",
+    "reselect": "^2.0.1"
   },
   "devDependencies": {
-    "babel-eslint": "^4.1.6",
+    "autoprefixer-loader": "^3.1.0",
+    "babel-core": "^6.3.26",
+    "babel-eslint": "^5.0.0-beta6",
+    "babel-loader": "^6.2.1",
     "babel-plugin-react-transform": "^2.0.0",
+    "babel-plugin-transform-react-constant-elements": "6.3.13",
+    "babel-plugin-transform-react-inline-elements": "6.3.13",
+    "babel-plugin-transform-react-remove-prop-types": "0.1.0",
+    "babel-preset-es2015": "6.3.13",
+    "babel-preset-react": "6.3.13",
+    "babel-preset-react-hmre": "1.0.1",
+    "babel-preset-stage-0": "6.3.13",
     "chai": "^3.4.1",
+    "css-loader": "^0.23.1",
     "eslint": "^1.10.3",
     "eslint-config-standard": "^4.4.0",
     "eslint-config-standard-react": "^1.2.1",
-    "eslint-loader": "^1.1.1",
-    "eslint-plugin-react": "^3.11.3",
+    "eslint-loader": "^1.2.0",
+    "eslint-plugin-react": "^3.14.0",
     "eslint-plugin-standard": "^1.3.1",
+    "exports-loader": "^0.6.2",
     "extract-text-webpack-plugin": "^1.0.0",
+    "file-loader": "^0.8.5",
     "gh-pages": "^0.8.0",
+    "html-webpack-plugin": "^1.7.0",
+    "imports-loader": "^0.6.5",
     "isparta": "^4.0.0",
     "isparta-instrumenter-loader": "^1.0.0",
-    "karma": "^0.13.15",
+    "karma": "^0.13.18",
     "karma-chai": "^0.1.0",
     "karma-coverage": "^0.5.3",
     "karma-mocha": "^0.2.1",
-    "karma-mocha-reporter": "^1.1.3",
+    "karma-mocha-reporter": "^1.1.5",
     "karma-notify-reporter": "^0.1.1",
-    "karma-phantomjs-launcher": "^0.2.1",
+    "karma-phantomjs-launcher": "^0.2.3",
     "karma-webpack": "^1.7.0",
     "mocha": "^2.3.4",
-    "nightwatch": "^0.8.9",
+    "nightwatch": "^0.8.14",
+    "node-sass": "^3.4.2",
     "phantomjs": "^1.9.19",
-    "react-addons-test-utils": "^0.14.3",
-    "react-transform-catch-errors": "^1.0.0",
+    "react-addons-test-utils": "^0.14.5",
+    "react-transform-catch-errors": "^1.0.1",
     "react-transform-hmr": "^1.0.1",
     "redbox-react": "^1.2.0",
-    "redux-devtools": "^3.0.0",
-    "webpack-dev-server": "^1.14.0"
+    "redux-devtools": "^3.0.1",
+    "sass-loader": "^3.1.2",
+    "style-loader": "^0.13.0",
+    "url-loader": "^0.5.7",
+    "webpack": "^1.12.9",
+    "webpack-dev-server": "^1.14.0",
+    "webpack-sources": "^0.1.0"
   },
   "engines": {
     "node": "^4.2.0",
@@ -77,15 +82,15 @@
   "main": "app/index.js",
   "repository": "git@bitbucket.org:oturner/tech-radar.git",
   "scripts": {
-    "critical": "critical dist/index.html -b dist/ -w 1300 -h 900 -i true -H dist/index.html",
     "analyze": "webpack --config _sys/webpack.production.js --profile --json > stats.json",
     "build": "webpack --config _sys/webpack.production.js",
-    "postbuild": "npm run critical",
-    "surge": "surge dist --domain $npm_package_name.surge.sh",
-    "build:surge": "npm run build && npm run surge && rm -rf ./dist",
     "build:gh": "npm run build && gh-pages -d ./dist && rm -r ./dist",
+    "build:surge": "npm run build && npm run surge && rm -rf ./dist",
+    "critical": "critical dist/index.html -b dist/ -w 1300 -h 900 -i true -H dist/index.html",
     "lint:js": "eslint ./app",
+    "postbuild": "npm run critical",
     "start": "webpack-dev-server --config _sys/webpack.config.js --no-info --hot --inline --content-base ./public --port 4000",
+    "surge": "surge dist --domain $npm_package_name.surge.sh",
     "test": "npm run test:watch -- --single-run",
     "test:ci": "karma start _sys/karma.ci.conf.js --single-run",
     "test:coverage": "karma start _sys/karma.coverage.conf.js --single-run",
