--- a/.babelrc
+++ b/.babelrc
@@ -1,25 +1,21 @@
 {
-  "stage": 0,
-  "plugins": [
-    "object-assign"
-  ],
   "env": {
     "development": {
+      "presets": [
+        "react-hmre"
+      ]
+    },
+    "production": {
       "plugins": [
-        "react-transform"
-      ],
-      "extra": {
-        "react-transform": {
-          "transforms": [{
-            "transform": "react-transform-hmr",
-            "imports": ["react"],
-            "locals": ["module"]
-          }, {
-            "transform": "react-transform-catch-errors",
-            "imports": ["react", "redbox-react"]
-          }]
-        }
-      }
+        "transform-react-remove-prop-types",
+        "transform-react-constant-elements",
+        "transform-react-inline-elements"
+      ]
     }
-  }
+  },
+  "presets": [
+    "es2015",
+    "react",
+    "stage-0"
+  ]
 }
