--- a/package.json
+++ b/package.json
@@ -4,75 +4,79 @@
   "version": "1.0.0",
   "author": "Oliver Turner",
   "dependencies": {
-    "bluebird": "^3.1.1",
-    "d3-color": "^0.3.3",
-    "d3-shape": "^0.3.0",
+    "bluebird": "^3.3.3",
+    "critical": "^0.7.0",
+    "d3-color": "^0.4.2",
+    "d3-shape": "^0.5.1",
     "debounce": "^1.0.0",
     "immutable": "^3.7.6",
-    "isomorphic-fetch": "^2.2.0",
+    "isomorphic-fetch": "^2.2.1",
     "markdown": "^0.5.0",
     "query-string": "^3.0.0",
-    "react": "^0.14.5",
-    "react-collapse": "^1.6.3",
-    "react-dom": "^0.14.5",
-    "react-motion": "^0.3.1",
-    "react-redux": "^4.0.6",
-    "redux": "^3.0.5",
+    "react": "^0.14.7",
+    "react-collapse": "^2.0.0",
+    "react-dom": "^0.14.7",
+    "react-height": "^2.0.4",
+    "react-motion": "^0.4.2",
+    "react-redux": "^4.4.0",
+    "redux": "^3.3.1",
     "redux-thunk": "^1.0.3",
-    "reselect": "^2.0.1"
+    "reselect": "^2.0.3"
   },
   "devDependencies": {
-    "autoprefixer-loader": "^3.1.0",
-    "babel-core": "^6.3.26",
-    "babel-eslint": "^5.0.0-beta6",
-    "babel-loader": "^6.2.1",
+    "autoprefixer-loader": "^3.2.0",
+    "babel-core": "^6.5.2",
+    "babel-eslint": "^5.0.0",
+    "babel-loader": "^6.2.3",
     "babel-plugin-react-transform": "^2.0.0",
-    "babel-plugin-transform-react-constant-elements": "6.3.13",
-    "babel-plugin-transform-react-inline-elements": "6.3.13",
-    "babel-plugin-transform-react-remove-prop-types": "0.1.0",
-    "babel-preset-es2015": "6.3.13",
-    "babel-preset-react": "6.3.13",
-    "babel-preset-react-hmre": "1.0.1",
-    "babel-preset-stage-0": "6.3.13",
-    "chai": "^3.4.1",
+    "babel-plugin-transform-react-constant-elements": "6.5.0",
+    "babel-plugin-transform-react-inline-elements": "6.5.0",
+    "babel-plugin-transform-react-remove-prop-types": "0.2.2",
+    "babel-preset-es2015": "6.5.0",
+    "babel-preset-react": "6.5.0",
+    "babel-preset-react-hmre": "1.1.0",
+    "babel-preset-stage-0": "6.5.0",
+    "chai": "^3.5.0",
+    "cross-env": "^1.0.7",
     "css-loader": "^0.23.1",
-    "eslint": "^1.10.3",
-    "eslint-config-standard": "^4.4.0",
-    "eslint-config-standard-react": "^1.2.1",
-    "eslint-loader": "^1.2.0",
-    "eslint-plugin-react": "^3.14.0",
-    "eslint-plugin-standard": "^1.3.1",
-    "exports-loader": "^0.6.2",
-    "extract-text-webpack-plugin": "^1.0.0",
+    "eslint": "^2.2.0",
+    "eslint-config-standard": "^5.1.0",
+    "eslint-config-standard-react": "^2.3.0",
+    "eslint-loader": "^1.3.0",
+    "eslint-plugin-promise": "^1.0.8",
+    "eslint-plugin-react": "^4.1.0",
+    "eslint-plugin-standard": "^1.3.2",
+    "exports-loader": "^0.6.3",
+    "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.8.5",
-    "gh-pages": "^0.8.0",
-    "html-webpack-plugin": "^1.7.0",
+    "gh-pages": "^0.10.0",
+    "html-webpack-plugin": "^2.9.0",
     "imports-loader": "^0.6.5",
     "isparta": "^4.0.0",
     "isparta-instrumenter-loader": "^1.0.0",
-    "karma": "^0.13.18",
+    "karma": "^0.13.21",
     "karma-chai": "^0.1.0",
     "karma-coverage": "^0.5.3",
-    "karma-mocha": "^0.2.1",
-    "karma-mocha-reporter": "^1.1.5",
+    "karma-mocha": "^0.2.2",
+    "karma-mocha-reporter": "^1.2.2",
     "karma-notify-reporter": "^0.1.1",
-    "karma-phantomjs-launcher": "^0.2.3",
+    "karma-phantomjs-launcher": "^1.0.0",
     "karma-webpack": "^1.7.0",
-    "mocha": "^2.3.4",
-    "nightwatch": "^0.8.14",
+    "mocha": "^2.4.5",
+    "nightwatch": "^0.8.16",
     "node-sass": "^3.4.2",
-    "phantomjs": "^1.9.19",
-    "react-addons-test-utils": "^0.14.5",
-    "react-transform-catch-errors": "^1.0.1",
-    "react-transform-hmr": "^1.0.1",
-    "redbox-react": "^1.2.0",
-    "redux-devtools": "^3.0.1",
+    "phantomjs-prebuilt": "^2.1.4",
+    "react-addons-test-utils": "^0.14.7",
+    "react-transform-catch-errors": "^1.0.2",
+    "react-transform-hmr": "^1.0.2",
+    "redbox-react": "^1.2.2",
+    "redux-devtools": "^3.1.1",
     "sass-loader": "^3.1.2",
     "style-loader": "^0.13.0",
     "url-loader": "^0.5.7",
-    "webpack": "^1.12.10",
-    "webpack-dev-server": "^1.14.0",
-    "webpack-sources": "^0.1.0"
+    "webpack": "^1.12.14",
+    "webpack-dev-server": "^1.14.1",
+    "webpack-sources": "^0.1.1"
   },
   "engines": {
     "node": "^4.2.0",
@@ -82,18 +86,20 @@
   "main": "app/index.js",
   "repository": "git@bitbucket.org:oturner/tech-radar.git",
   "scripts": {
-    "analyze": "webpack --config _sys/webpack.production.js --profile --json > stats.json",
-    "build": "webpack --config _sys/webpack.production.js",
-    "build:gh": "npm run build && gh-pages -d ./dist && rm -r ./dist",
-    "build:surge": "npm run build && npm run surge && rm -rf ./dist",
     "critical": "critical dist/index.html -b dist/ -w 1300 -h 900 -i true -H dist/index.html",
-    "lint:js": "eslint ./app",
-    "postbuild": "npm run critical",
-    "start": "webpack-dev-server --config _sys/webpack.config.js --no-info --hot --inline --content-base ./public --port 4000",
+    "ghpages:":"gh-pages -d ./dist",
     "surge": "surge dist --domain $npm_package_name.surge.sh",
+    "analyze": "webpack --config _sys/webpack.production.js --profile --json > stats.json",
+    "prebuild": "rm -rf ./dist",
+    "build": "cross-env NODE_ENV=production webpack --config _sys/webpack.production.js",
+    "postbuild": "npm run critical",
+    "build:publish": "npm run build && npm run surge",
+    "postbuild:publish": "rm -rf ./dist",
+    "lint:js": "eslint ./app",
+    "start": "webpack-dev-server --config _sys/webpack.config.js --no-info --hot --inline --content-base ./public --port 4000",
     "test": "npm run test:watch -- --single-run",
-    "test:ci": "karma start _sys/karma.ci.conf.js --single-run",
-    "test:coverage": "karma start _sys/karma.coverage.conf.js --single-run",
-    "test:watch": "karma start _sys/karma.conf.js"
+    "test:ci": "cross-env NODE_ENV=test karma start _sys/karma.ci.conf.js --single-run",
+    "test:coverage": "cross-env NODE_ENV=test karma start _sys/karma.coverage.conf.js --single-run",
+    "test:watch": "cross-env NODE_ENV=test karma start _sys/karma.conf.js"
   }
 }
