Renamed _sys folder, updated deps, added stylelint and build configs

--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "babel-preset-react-hmre": "1.1.1",
     "babel-preset-stage-0": "6.5.0",
     "chai": "^3.5.0",
+    "coveralls": "2.11.9",
     "cross-env": "^1.0.7",
     "css-loader": "^0.23.1",
     "eslint": "^2.5.1",
@@ -73,6 +74,8 @@
     "redux-devtools": "^3.1.1",
     "sass-loader": "^3.2.0",
     "style-loader": "^0.13.1",
+    "stylelint": "5.2.1",
+    "stylelint-config-standard": "4.0.1",
     "url-loader": "^0.5.7",
     "webpack": "^1.12.14",
     "webpack-dev-server": "^1.14.1",
@@ -86,20 +89,23 @@
   "main": "app/index.js",
   "repository": "git@bitbucket.org:oturner/tech-radar.git",
   "scripts": {
+    "clean": "rm -rf ./dist",
     "critical": "critical dist/index.html -b dist/ -w 1300 -h 900 -i true -H dist/index.html",
     "ghpages:": "gh-pages -d ./dist",
     "surge": "surge dist --domain $npm_package_name.surge.sh",
-    "analyze": "webpack --config _sys/webpack.production.js --profile --json > stats.json",
-    "prebuild": "rm -rf ./dist",
-    "build": "cross-env NODE_ENV=production webpack --config _sys/webpack.production.js",
+    "analyze": "webpack --config _config/webpack.production.js --profile --json > stats.json",
+    "prebuild": "npm run clean",
+    "build": "cross-env NODE_ENV=production webpack --config _config/webpack.production.js",
     "postbuild": "npm run critical",
-    "build:publish": "npm run build && npm run surge",
-    "postbuild:publish": "rm -rf ./dist",
+    "predeploy": "npm run build",
+    "deploy": "npm run surge",
+    "postdeploy": "npm run clean",
     "lint:js": "eslint ./app",
-    "start": "webpack-dev-server --config _sys/webpack.config.js --no-info --hot --inline --content-base ./public --port 4000",
+    "lint:css": "stylelint ./app",
+    "start": "webpack-dev-server --config _config/webpack.config.js --no-info --hot --inline --content-base ./public --port 4000",
     "test": "npm run test:watch -- --single-run",
-    "test:ci": "cross-env NODE_ENV=test karma start _sys/karma.ci.conf.js --single-run",
-    "test:coverage": "cross-env NODE_ENV=test karma start _sys/karma.coverage.conf.js --single-run",
-    "test:watch": "cross-env NODE_ENV=test karma start _sys/karma.conf.js"
+    "test:ci": "cross-env NODE_ENV=test karma start _config/karma.ci.conf.js --single-run",
+    "test:coverage": "cross-env NODE_ENV=test karma start _config/karma.coverage.conf.js --single-run",
+    "test:watch": "cross-env NODE_ENV=test karma start _config/karma.conf.js"
   }
 }
