switched to pure css accordion, pruned unneeded npm deps

--- a/package.json
+++ b/package.json
@@ -14,10 +14,7 @@
     "markdown": "^0.5.0",
     "query-string": "^4.0.0",
     "react": "^0.14.7",
-    "react-collapse": "^2.0.0",
     "react-dom": "^0.14.7",
-    "react-height": "^2.0.4",
-    "react-motion": "^0.4.2",
     "react-redux": "^4.4.1",
     "redux": "^3.3.1",
     "redux-thunk": "^2.0.1",
@@ -68,9 +65,6 @@
     "node-sass": "^3.4.2",
     "phantomjs-prebuilt": "^2.1.7",
     "react-addons-test-utils": "^0.14.7",
-    "react-transform-catch-errors": "^1.0.2",
-    "react-transform-hmr": "^1.0.4",
-    "redbox-react": "^1.2.2",
     "redux-devtools": "^3.1.1",
     "sass-loader": "^3.2.0",
     "style-loader": "^0.13.1",
@@ -96,7 +90,7 @@
     "analyze": "webpack --config _config/webpack.production.js --profile --json > stats.json",
     "prebuild": "npm run clean",
     "build": "cross-env NODE_ENV=production webpack --config _config/webpack.production.js",
-    "postbuild": "npm run critical",
+    "postbuild": "npm run critical && cp -R ./public/* ./dist",
     "predeploy": "npm run build",
     "deploy": "npm run surge",
     "postdeploy": "npm run clean",
