--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "reselect": "^2.2.1"
   },
   "devDependencies": {
-    "autoprefixer-loader": "^3.2.0",
+    "autoprefixer": "6.3.5",
     "babel-core": "^6.7.4",
     "babel-eslint": "^6.0.0",
     "babel-loader": "^6.2.4",
@@ -62,8 +62,10 @@
     "karma-webpack": "^1.7.0",
     "mocha": "^2.4.5",
     "nightwatch": "^0.8.18",
-    "node-sass": "^3.4.2",
     "phantomjs-prebuilt": "^2.1.7",
+    "postcss-loader": "0.8.2",
+    "postcss-scss": "0.1.7",
+    "precss": "1.4.0",
     "react-addons-test-utils": "^0.14.7",
     "redux-devtools": "^3.1.1",
     "sass-loader": "^3.2.0",
