--- a/package.json
+++ b/package.json
@@ -4,31 +4,31 @@
   "version": "1.0.0",
   "author": "Oliver Turner",
   "dependencies": {
-    "bluebird": "^3.3.4",
+    "bluebird": "^3.3.5",
     "critical": "^0.7.2",
     "d3-color": "^0.4.2",
     "d3-shape": "^0.6.0",
     "debounce": "^1.0.0",
-    "immutable": "^3.7.6",
+    "immutable": "^3.8.1",
     "isomorphic-fetch": "^2.2.1",
     "markdown": "^0.5.0",
     "query-string": "^4.1.0",
-    "react": "^0.14.8",
-    "react-dom": "^0.14.8",
-    "react-redux": "^4.4.1",
-    "redux": "^3.3.1",
+    "react": "^15.0.1",
+    "react-dom": "^15.0.1",
+    "react-redux": "^4.4.5",
+    "redux": "^3.5.1",
     "redux-thunk": "^2.0.1",
-    "reselect": "^2.2.1"
+    "reselect": "^2.5.1"
   },
   "devDependencies": {
     "autoprefixer": "6.3.6",
-    "babel-core": "^6.7.4",
-    "babel-eslint": "^6.0.2",
+    "babel-core": "^6.7.7",
+    "babel-eslint": "^6.0.3",
     "babel-loader": "^6.2.4",
     "babel-plugin-react-transform": "^2.0.2",
     "babel-plugin-transform-react-constant-elements": "6.5.0",
     "babel-plugin-transform-react-inline-elements": "6.6.5",
-    "babel-plugin-transform-react-remove-prop-types": "0.2.4",
+    "babel-plugin-transform-react-remove-prop-types": "0.2.5",
     "babel-preset-es2015": "6.6.0",
     "babel-preset-react": "6.5.0",
     "babel-preset-react-hmre": "1.1.1",
@@ -37,18 +37,18 @@
     "coveralls": "2.11.9",
     "cross-env": "^1.0.7",
     "css-loader": "^0.23.1",
-    "eslint": "^2.6.0",
+    "eslint": "^2.8.0",
     "eslint-config-standard": "^5.1.0",
     "eslint-config-standard-react": "^2.3.0",
     "eslint-loader": "^1.3.0",
     "eslint-plugin-promise": "^1.1.0",
-    "eslint-plugin-react": "^4.2.3",
+    "eslint-plugin-react": "^5.0.1",
     "eslint-plugin-standard": "^1.3.2",
     "exports-loader": "^0.6.3",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.8.5",
     "gh-pages": "^0.11.0",
-    "html-webpack-plugin": "^2.15.0",
+    "html-webpack-plugin": "^2.16.0",
     "imports-loader": "^0.6.5",
     "isparta": "^4.0.0",
     "isparta-instrumenter-loader": "^1.0.0",
@@ -56,26 +56,27 @@
     "karma-chai": "^0.1.0",
     "karma-coverage": "^0.5.5",
     "karma-mocha": "^0.2.2",
-    "karma-mocha-reporter": "^2.0.0",
+    "karma-mocha-reporter": "^2.0.2",
     "karma-notify-reporter": "^0.1.1",
     "karma-phantomjs-launcher": "^1.0.0",
     "karma-webpack": "^1.7.0",
     "mocha": "^2.4.5",
     "nightwatch": "^0.8.18",
     "phantomjs-prebuilt": "^2.1.7",
+    "postcss-cssnext": "2.5.2",
     "postcss-loader": "0.8.2",
+    "postcss-nested": "1.0.0",
     "postcss-scss": "0.1.7",
-    "precss": "1.4.0",
-    "react-addons-test-utils": "^0.14.8",
+    "react-addons-test-utils": "^15.0.1",
     "redux-devtools": "^3.2.0",
-    "sass-loader": "^3.2.0",
+    "sanitize.css": "3.3.0",
     "style-loader": "^0.13.1",
-    "stylelint": "5.2.1",
-    "stylelint-config-standard": "4.0.1",
+    "stylelint": "6.0.3",
+    "stylelint-config-standard": "6.0.0",
     "url-loader": "^0.5.7",
-    "webpack": "^1.12.14",
+    "webpack": "^1.13.0",
     "webpack-dev-server": "^1.14.1",
-    "webpack-sources": "^0.1.1"
+    "webpack-sources": "^0.1.2"
   },
   "engines": {
     "node": "^4.2.0",
@@ -89,19 +90,19 @@
     "critical": "critical dist/index.html -b dist/ -w 1300 -h 900 -i true -H dist/index.html",
     "ghpages:": "gh-pages -d ./dist",
     "surge": "surge dist --domain $npm_package_name.surge.sh",
-    "analyze": "webpack --config _config/webpack.production.js --profile --json > stats.json",
+    "analyze": "webpack --config config/webpack.production.js --profile --json > stats.json",
     "prebuild": "npm run clean",
-    "build": "cross-env NODE_ENV=production webpack --config _config/webpack.production.js",
+    "build": "cross-env NODE_ENV=production webpack --config config/webpack.prod.babel.js",
     "postbuild": "npm run critical && cp -R ./public/* ./dist",
     "predeploy": "npm run build",
     "deploy": "npm run surge",
     "postdeploy": "npm run clean",
     "lint:js": "eslint ./app/**/*.{js,jsx}",
     "lint:css": "stylelint ./app",
-    "start": "webpack-dev-server --config _config/webpack.config.js --no-info --hot --inline --content-base ./public --port 4000",
+    "start": "webpack-dev-server --config config/webpack.dev.babel.js --hot --inline",
     "test": "npm run test:watch -- --single-run",
-    "test:ci": "cross-env NODE_ENV=test karma start _config/karma.ci.conf.js --single-run",
-    "test:coverage": "cross-env NODE_ENV=test karma start _config/karma.coverage.conf.js --single-run",
-    "test:watch": "cross-env NODE_ENV=test karma start _config/karma.conf.js"
+    "test:ci": "cross-env NODE_ENV=test karma start config/karma.ci.conf.js --single-run",
+    "test:coverage": "cross-env NODE_ENV=test karma start config/karma.coverage.conf.js --single-run",
+    "test:watch": "cross-env NODE_ENV=test karma start config/karma.conf.js"
   }
 }
