--- a/package.json
+++ b/package.json
@@ -25,13 +25,10 @@
     "babel-core": "^6.7.7",
     "babel-eslint": "^6.0.3",
     "babel-loader": "^6.2.4",
-    "babel-plugin-react-transform": "^2.0.2",
-    "babel-plugin-transform-react-constant-elements": "6.5.0",
-    "babel-plugin-transform-react-inline-elements": "6.6.5",
-    "babel-plugin-transform-react-remove-prop-types": "0.2.5",
     "babel-preset-es2015": "6.6.0",
     "babel-preset-react": "6.5.0",
     "babel-preset-react-hmre": "1.1.1",
+    "babel-preset-react-optimize": "1.0.1",
     "babel-preset-stage-0": "6.5.0",
     "chai": "^3.5.0",
     "coveralls": "2.11.9",
@@ -64,6 +61,7 @@
     "nightwatch": "^0.8.18",
     "phantomjs-prebuilt": "^2.1.7",
     "postcss-cssnext": "2.5.2",
+    "postcss-custom-properties": "5.0.0",
     "postcss-loader": "0.8.2",
     "postcss-nested": "1.0.0",
     "postcss-scss": "0.1.7",
@@ -85,6 +83,60 @@
   "license": "MIT",
   "main": "app/index.js",
   "repository": "git@bitbucket.org:oturner/tech-radar.git",
+  "babel": {
+    "env": {
+      "development": {
+        "presets": [
+          "react-hmre"
+        ]
+      },
+      "production": {
+        "presets": [
+          "react-optimize"
+        ]
+      }
+    },
+    "presets": ["es2015", "react", "stage-0"]
+  },
+  "eslintConfig": {
+    "extends": ["standard", "standard-react"],
+    "parser": "babel-eslint",
+    "rules": {
+      "brace-style": [2, "stroustrup", {"allowSingleLine": true}],
+      "key-spacing": [2, {"align": "value"}],
+      "indent": [2, 2, {"SwitchCase": 1}],
+      "jsx-quotes": [2, "prefer-double"],
+      "no-multi-spaces": 0,
+      "react/no-danger": 0,
+      "react/sort-comp": [
+        2, {
+          "order": [
+            "static-methods",
+            "lifecycle",
+            "everything-else",
+            "rendering"
+          ],
+          "groups": {
+            "rendering": [
+              "/^render.+$/",
+              "render"
+            ]
+          }
+        }
+      ],
+      "spaced-comment": [2, "always", {"exceptions": ["-", "*"]}],
+      "standard/object-curly-even-spacing": 0
+    },
+    "globals": {
+      "define": true,
+      "jasmine": true,
+      "expect": true,
+      "beforeEach": true,
+      "afterEach": true,
+      "describe": true,
+      "it": true
+    }
+  },
   "scripts": {
     "clean": "rm -rf ./dist",
     "critical": "critical dist/index.html -b dist/ -w 1300 -h 900 -i true -H dist/index.html",
