--- a/package.json
+++ b/package.json
@@ -16,14 +16,14 @@
     "react": "^15.0.1",
     "react-dom": "^15.0.1",
     "react-redux": "^4.4.5",
-    "redux": "^3.5.1",
+    "redux": "^3.5.2",
     "redux-thunk": "^2.0.1",
     "reselect": "^2.5.1"
   },
   "devDependencies": {
     "autoprefixer": "6.3.6",
     "babel-core": "^6.7.7",
-    "babel-eslint": "^6.0.3",
+    "babel-eslint": "^6.0.4",
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "6.6.0",
     "babel-preset-react": "6.5.0",
@@ -35,13 +35,14 @@
     "cross-env": "^1.0.7",
     "css-loader": "^0.23.1",
     "eslint": "^2.8.0",
-    "eslint-config-standard": "^5.1.0",
+    "eslint-config-standard": "^5.2.0",
     "eslint-config-standard-react": "^2.3.0",
     "eslint-loader": "^1.3.0",
     "eslint-plugin-promise": "^1.1.0",
     "eslint-plugin-react": "^5.0.1",
     "eslint-plugin-standard": "^1.3.2",
     "exports-loader": "^0.6.3",
+    "expose-loader": "^0.7.1",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.8.5",
     "gh-pages": "^0.11.0",
@@ -61,15 +62,16 @@
     "nightwatch": "^0.8.18",
     "phantomjs-prebuilt": "^2.1.7",
     "postcss-cssnext": "2.5.2",
-    "postcss-custom-properties": "5.0.0",
+    "postcss-custom-properties": "5.0.1",
     "postcss-loader": "0.8.2",
     "postcss-nested": "1.0.0",
     "postcss-scss": "0.1.7",
+    "react-addons-perf": "^15.0.1",
     "react-addons-test-utils": "^15.0.1",
     "redux-devtools": "^3.2.0",
     "sanitize.css": "3.3.0",
     "style-loader": "^0.13.1",
-    "stylelint": "6.0.3",
+    "stylelint": "6.2.2",
     "stylelint-config-standard": "6.0.0",
     "url-loader": "^0.5.7",
     "webpack": "^1.13.0",
@@ -96,20 +98,48 @@
         ]
       }
     },
-    "presets": ["es2015", "react", "stage-0"]
+    "presets": [
+      "es2015",
+      "react",
+      "stage-0"
+    ]
   },
   "eslintConfig": {
-    "extends": ["standard", "standard-react"],
+    "extends": [
+      "standard",
+      "standard-react"
+    ],
     "parser": "babel-eslint",
     "rules": {
-      "brace-style": [2, "stroustrup", {"allowSingleLine": true}],
-      "key-spacing": [2, {"align": "value"}],
-      "indent": [2, 2, {"SwitchCase": 1}],
-      "jsx-quotes": [2, "prefer-double"],
+      "brace-style": [
+        2,
+        "stroustrup",
+        {
+          "allowSingleLine": true
+        }
+      ],
+      "key-spacing": [
+        2,
+        {
+          "align": "value"
+        }
+      ],
+      "indent": [
+        2,
+        2,
+        {
+          "SwitchCase": 1
+        }
+      ],
+      "jsx-quotes": [
+        2,
+        "prefer-double"
+      ],
       "no-multi-spaces": 0,
       "react/no-danger": 0,
       "react/sort-comp": [
-        2, {
+        2,
+        {
           "order": [
             "static-methods",
             "lifecycle",
@@ -124,7 +154,16 @@
           }
         }
       ],
-      "spaced-comment": [2, "always", {"exceptions": ["-", "*"]}],
+      "spaced-comment": [
+        2,
+        "always",
+        {
+          "exceptions": [
+            "-",
+            "*"
+          ]
+        }
+      ],
       "standard/object-curly-even-spacing": 0
     },
     "globals": {
@@ -155,6 +194,7 @@
     "test": "npm run test:watch -- --single-run",
     "test:ci": "cross-env NODE_ENV=test karma start config/karma.ci.conf.js --single-run",
     "test:coverage": "cross-env NODE_ENV=test karma start config/karma.coverage.conf.js --single-run",
-    "test:watch": "cross-env NODE_ENV=test karma start config/karma.conf.js"
+    "test:watch": "cross-env NODE_ENV=test karma start config/karma.conf.js",
+    "static": "webpack --config config/webpack.static.babel.js"
   }
 }
