--- a/package.json
+++ b/package.json
@@ -13,8 +13,9 @@
     "isomorphic-fetch": "^2.2.1",
     "markdown": "^0.5.0",
     "query-string": "^4.1.0",
-    "react": "^15.0.1",
-    "react-dom": "^15.0.1",
+    "react": "^15.0.2",
+    "react-dom": "^15.0.2",
+    "react-motion": "^0.4.3",
     "react-redux": "^4.4.5",
     "redux": "^3.5.2",
     "redux-thunk": "^2.0.1",
@@ -25,6 +26,7 @@
     "babel-core": "^6.7.7",
     "babel-eslint": "^6.0.4",
     "babel-loader": "^6.2.4",
+    "babel-plugin-css-modules-transform": "0.0.9",
     "babel-preset-es2015": "6.6.0",
     "babel-preset-react": "6.5.0",
     "babel-preset-react-hmre": "1.1.1",
@@ -34,9 +36,9 @@
     "coveralls": "2.11.9",
     "cross-env": "^1.0.7",
     "css-loader": "^0.23.1",
-    "eslint": "^2.8.0",
-    "eslint-config-standard": "^5.2.0",
-    "eslint-config-standard-react": "^2.3.0",
+    "eslint": "^2.9.0",
+    "eslint-config-standard": "^5.3.0",
+    "eslint-config-standard-react": "^2.4.0",
     "eslint-loader": "^1.3.0",
     "eslint-plugin-promise": "^1.1.0",
     "eslint-plugin-react": "^5.0.1",
@@ -46,14 +48,14 @@
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.8.5",
     "gh-pages": "^0.11.0",
-    "html-webpack-plugin": "^2.16.0",
+    "html-webpack-plugin": "^2.16.1",
     "imports-loader": "^0.6.5",
     "isparta": "^4.0.0",
     "isparta-instrumenter-loader": "^1.0.0",
     "karma": "^0.13.22",
     "karma-chai": "^0.1.0",
     "karma-coverage": "^0.5.5",
-    "karma-mocha": "^0.2.2",
+    "karma-mocha": "^1.0.1",
     "karma-mocha-reporter": "^2.0.2",
     "karma-notify-reporter": "^0.1.1",
     "karma-phantomjs-launcher": "^1.0.0",
@@ -63,19 +65,19 @@
     "phantomjs-prebuilt": "^2.1.7",
     "postcss-cssnext": "2.5.2",
     "postcss-custom-properties": "5.0.1",
-    "postcss-loader": "0.8.2",
+    "postcss-loader": "0.9.1",
     "postcss-nested": "1.0.0",
     "postcss-scss": "0.1.7",
-    "react-addons-perf": "^15.0.1",
-    "react-addons-test-utils": "^15.0.1",
+    "react-addons-perf": "^15.0.2",
+    "react-addons-test-utils": "^15.0.2",
     "redux-devtools": "^3.2.0",
     "sanitize.css": "3.3.0",
     "style-loader": "^0.13.1",
     "stylelint": "6.2.2",
-    "stylelint-config-standard": "6.0.0",
+    "stylelint-config-standard": "^6.0.0",
     "url-loader": "^0.5.7",
-    "webpack": "^1.13.0",
-    "webpack-dev-server": "^1.14.1",
+    "webpack": "^2.1.0-beta.6",
+    "webpack-dev-server": "^2.0.0-beta",
     "webpack-sources": "^0.1.2"
   },
   "engines": {
@@ -83,7 +85,7 @@
     "npm": "2.14.7"
   },
   "license": "MIT",
-  "main": "app/index.js",
+  "main": "src/index.jsx",
   "repository": "git@bitbucket.org:oturner/tech-radar.git",
   "babel": {
     "env": {
@@ -93,6 +95,14 @@
         ]
       },
       "production": {
+        "presets": [
+          "react-optimize"
+        ]
+      },
+      "static": {
+        "plugins": [
+          "css-modules-transform"
+        ],
         "presets": [
           "react-optimize"
         ]
@@ -176,6 +186,9 @@
       "it": true
     }
   },
+  "stylelint": {
+    "extends": "stylelint-config-standard"
+  },
   "scripts": {
     "clean": "rm -rf ./dist",
     "critical": "critical dist/index.html -b dist/ -w 1300 -h 900 -i true -H dist/index.html",
@@ -188,13 +201,14 @@
     "predeploy": "npm run build",
     "deploy": "npm run surge",
     "postdeploy": "npm run clean",
-    "lint:js": "eslint ./app/**/*.{js,jsx}",
-    "lint:css": "stylelint ./app",
+    "lint:js": "eslint ./src/**/*.{js,jsx}",
+    "lint:css": "stylelint ./src/**/*.pcss",
+    "lint": "npm-run-all lint:*",
     "start": "webpack-dev-server --config config/webpack.dev.babel.js --hot --inline",
     "test": "npm run test:watch -- --single-run",
     "test:ci": "cross-env NODE_ENV=test karma start config/karma.ci.conf.js --single-run",
     "test:coverage": "cross-env NODE_ENV=test karma start config/karma.coverage.conf.js --single-run",
     "test:watch": "cross-env NODE_ENV=test karma start config/karma.conf.js",
-    "static": "webpack --config config/webpack.static.babel.js"
+    "static": "cross-env NODE_ENV=static webpack --config config/webpack.static.babel.js"
   }
 }
