--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
     "d3-shape": "^0.6.0",
     "debounce": "^1.0.0",
     "immutable": "^3.8.1",
-    "isomorphic-fetch": "^2.2.1",
     "markdown": "^0.5.0",
     "query-string": "^4.1.0",
     "react": "^15.0.2",
@@ -23,10 +22,10 @@
   },
   "devDependencies": {
     "autoprefixer": "6.3.6",
-    "babel-core": "^6.7.7",
+    "babel-core": "^6.8.0",
     "babel-eslint": "^6.0.4",
     "babel-loader": "^6.2.4",
-    "babel-plugin-css-modules-transform": "0.0.9",
+    "babel-plugin-css-modules-transform": "0.1.0",
     "babel-preset-es2015": "6.6.0",
     "babel-preset-react": "6.5.0",
     "babel-preset-react-hmre": "1.1.1",
@@ -37,7 +36,7 @@
     "cross-env": "^1.0.7",
     "css-loader": "^0.23.1",
     "eslint": "^2.9.0",
-    "eslint-config-standard": "^5.3.0",
+    "eslint-config-standard": "^5.3.1",
     "eslint-config-standard-react": "^2.4.0",
     "eslint-loader": "^1.3.0",
     "eslint-plugin-promise": "^1.1.0",
@@ -54,7 +53,7 @@
     "isparta-instrumenter-loader": "^1.0.0",
     "karma": "^0.13.22",
     "karma-chai": "^0.1.0",
-    "karma-coverage": "^0.5.5",
+    "karma-coverage": "^1.0.0",
     "karma-mocha": "^1.0.1",
     "karma-mocha-reporter": "^2.0.2",
     "karma-notify-reporter": "^0.1.1",
@@ -76,8 +75,8 @@
     "stylelint": "6.2.2",
     "stylelint-config-standard": "^6.0.0",
     "url-loader": "^0.5.7",
-    "webpack": "^2.1.0-beta.6",
-    "webpack-dev-server": "^2.0.0-beta",
+    "webpack": "^1.13.0",
+    "webpack-dev-server": "^1.14.1",
     "webpack-sources": "^0.1.2"
   },
   "engines": {
@@ -194,7 +193,7 @@
     "critical": "critical dist/index.html -b dist/ -w 1300 -h 900 -i true -H dist/index.html",
     "ghpages:": "gh-pages -d ./dist",
     "surge": "surge dist --domain $npm_package_name.surge.sh",
-    "analyze": "webpack --config config/webpack.production.js --profile --json > stats.json",
+    "analyze": "webpack --config config/webpack.prod.babel.js --profile --json > stats.json",
     "prebuild": "npm run clean",
     "build": "cross-env NODE_ENV=production webpack --config config/webpack.prod.babel.js",
     "postbuild": "npm run critical && cp -R ./public/* ./dist",
