--- a/package.json
+++ b/package.json
@@ -55,13 +55,15 @@
     "karma-chai": "^0.1.0",
     "karma-coverage": "^1.0.0",
     "karma-mocha": "^1.0.1",
-    "karma-mocha-reporter": "^2.0.2",
+    "karma-mocha-reporter": "^2.0.3",
     "karma-notify-reporter": "^0.1.1",
     "karma-phantomjs-launcher": "^1.0.0",
     "karma-webpack": "^1.7.0",
     "mocha": "^2.4.5",
     "nightwatch": "^0.8.18",
+    "offline-plugin": "^2.2.0",
     "phantomjs-prebuilt": "^2.1.7",
+    "postcss-apply": "^0.2.0",
     "postcss-cssnext": "2.5.2",
     "postcss-custom-properties": "5.0.1",
     "postcss-loader": "0.9.1",
@@ -75,8 +77,8 @@
     "stylelint": "6.2.2",
     "stylelint-config-standard": "^6.0.0",
     "url-loader": "^0.5.7",
-    "webpack": "^1.13.0",
-    "webpack-dev-server": "^1.14.1",
+    "webpack": "^2.1.0-beta.6",
+    "webpack-dev-server": "^2.0.0-beta",
     "webpack-sources": "^0.1.2"
   },
   "engines": {
